[metadata]
name = sbgm
version = 0.1.0
description = Score based diffusion models via SDEs
long_description = file: README.md
long_description_content_type = text/markdown
author = SBGM Contributors
license = MIT

[options]
packages = find:
install_requires =
    torch
    torchvision
    numpy
    matplotlib
    tqdm
    pyyaml
python_requires = >=3.8

[options.extras_require]
extras =
    tensorboard
    torchdiffeq

[options.package_data]
sbgm =
    py.typed